--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -58,10 +58,10 @@ While my work will not expand the field of \APE directly, I will adapt it into t
 Existing training sets can be used to optimize the prompts.
 
 \section{Training Data for different Domains}
+%TODO: could include one or two more domains
 Trace Link Recovery tasks can be applied across many domains.
 Often, authors will focus on one or a few domains instead of attempting to cover everything.
 Domain specific training data includes the artifacts and, ideally, also a gold standard to compare results to.
-
 
 
 Software architecture documentation to software architecture models for BigBlueButton, MediaStore, Teammates, and Teastore are publicly available by \citewithauthor{fuchss2022ArDoCoBenchmark} GitHub.
