Update on Overleaf.

--- a/sections/work_plan.tex
+++ b/sections/work_plan.tex
@@ -60,13 +60,13 @@ For further evaluation, aside from the performance of the optimized prompts, dif
 This work will yield code to be merged into the LiSSA repository\footnote{https://github.com/ArDoCo/LiSSA-RATLR/}.
 The implementation during the work packages~\nameref{phase_naive_iterative} and~\nameref{phase_gradient_descent} in \autoref{sec:work_phases} will provide a base to implement further automatic prompt optimization techniques with similar building blocks.
 
-A written report, my bachelor's thesis, will be created to document, summarize, and evaluate the results of this automatic prompt optimization work to retrieve trace links.
+Also, a written report, my bachelor's thesis, will be created to document, summarize, and evaluate the results of this automatic prompt optimization work to retrieve trace links.
 
 
 \section{Risk Management}
 \label{sec:work_risks}
 The major risk of my work would be failing to implement the \nameref{phase_gradient_descent} in \autoref{phase_gradient_descent}.
-By choosing an optimization algorithm that has Python ode publicly available, this risk is already greatly reduced.
+By choosing an optimization algorithm that has Python source code publicly available, this risk is already greatly reduced.
 Furthermore, all three work packages with implementation content will yield a classifier that can be tested and evaluated independently against the existing classifiers in the LiSSA Framework.
 Thus, early working examples will be available throughout the thesis.
 
@@ -136,6 +136,6 @@ There is also a code review scheduled during the likely longest implementation s
       
     \end{ganttchart}
     \end{center}
-    \caption{Gantt chart for thesis plan}
+    \caption{Gantt chart for thesis schedule}
     \label{fig:gantt}
 \end{figure}
