Update on Overleaf.

--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -10,10 +10,9 @@ Last but not least, I will explain how I plan to evaluate and compare my finding
 \label{approach:sec:tot}
 
 \begin{figure}
-    %TODO: replicate this figure!
     \centering
-    \includegraphics[width=\linewidth]{graphics/ToT_Yao}
-    \caption{Tree of Thought visualization by \citewithauthor{yao2023TreeThoughts}}
+    \includesvg[width=\linewidth]{graphics/tree_of_thought}
+    \caption{\Ac{ToT} visualization inspired by \citewithauthor{yao2023TreeThoughts}}
     \label{fig:ToT_visualization}
 \end{figure}
 
