--- a/thesis.tex
+++ b/thesis.tex
@@ -28,7 +28,7 @@
 \title{Automated Prompt Engineering for Traceability Link Recovery}
 
 %% Type of the thesis 
-\thesistype{Bachelor's Thesis}
+\thesistype{Proposal for Bachelor's Thesis}
 
 %% Change the institute here, ``KASTEL'' is default
 % \myinstitute{Institute for \dots}
