added tree of thought graphic

--- a/01_Proposal/Document/thesis.bib
+++ b/01_Proposal/Document/thesis.bib
@@ -220,7 +220,7 @@
   url = {https://ieeexplore.ieee.org/abstract/document/9609109},
   urldate = {2025-06-14},
   eventtitle = {2021 {{IEEE International Conference}} on {{Software Maintenance}} and {{Evolution}} ({{ICSME}})},
-  keywords = {Bit error rate,Bridges,Conferences,Knowledge based systems,Natural Language Processing,Natural languages,Requirements Engineering,Semantics,Software maintenance,Traceability,Traceability Link Recovery,Word Embeddings,Word Movers Distance}
+  keywords = {Bit error rate,Bridges,Conferences,FTLR,Knowledge based systems,Natural Language Processing,Natural languages,Requirements Engineering,Semantics,Software maintenance,Traceability,Traceability Link Recovery,Word Embeddings,Word Movers Distance}
 }
 
 @software{hey2025ReplicationPackage,
