--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -12,77 +12,25 @@
 
 \chapter{Introduction}
 \label{ch:Introduction}
+During software development, numerous artifacts are created, ranging from the actual project code to documentation and a multitude of formal and informal diagrams. \Acl{TLR} aims to link these artifacts across different domains or versions.
+Challenges such as inconsistent naming are frequent issues in software projects~\cite{wohlrab2019ImprovingConsistency}. \TLR approaches need to be able to deal with such hardships. \autoref{fig:artifact_overview} provides an overview of what these artifacts might look like.
 
-%% -------------------
-%% | Example content |
-%% -------------------
-
-This is the template for Bachelor's and Master's theses at SDQ.
-For more information on the formatting of theses at SDQ, please refer to
-\url{https://sdq.kastel.kit.edu/wiki/Ausarbeitungshinweise} or to your advisor.
-
-\section{Spacing and indentation}
-To separate parts of text in \LaTeX, please use two line breaks in your source code.
-They will then be set with correct indentation.
-Do \emph{not} use:
-\begin{itemize}
-  \itemsep0em
-  \item \texttt{\textbackslash\textbackslash}
-  \item \texttt{\textbackslash parskip}
-  \item \texttt{\textbackslash vskip}
-\end{itemize} 
-or other commands to manually insert spaces, since they break the layout of this template.
-
-\section{Example: Citation}
-\label{sec:Introduction:Citation}
-This template is based on \texttt{biblatex} and \texttt{biber}, which is preferred over the
-outdated Bib\TeX{} software.
-Please adjust your build environment if necessary (see
-\url{https://sdq.kastel.kit.edu/wiki/BibTeX-Literaturlisten#biblatex.2Fbiber})
-
-A citation: \cite{becker2008a} 
-
-\section{Example: Figures}
-\label{sec:Introduction:Figures}
 \begin{figure}
-\centering
-\includegraphics[width=4cm]{logos/sdqlogo}
-\caption{SDQ logo}
-\label{fig:sdqlogo}
+    \centering
+    \includegraphics[width=0.6\linewidth]{graphics/artifact_overview_Fuchß}
+    \caption{Overview of different artifacts during software development by \citewithauthor{fuchss2025LiSSAGeneric}}
+    \label{fig:artifact_overview}
 \end{figure}
 
-A reference: The SDQ logo is displayed in \autoref{fig:sdqlogo}. 
-(Use \code{\textbackslash autoref\{\}} for easy referencing.) 
+\Aclp{LLM} have made rapid advancements in recent years.
+They are becoming increasingly popular for dealing with \TLR tasks and have shown auspicious results so far.
+As they are still unable to reason and think on their own~\cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results.
+However, manually determining prompts suited for each specific problem is quite a tedious, time- and labor-intensive task.
 
-\section{Example: Tables}
-The \texttt{booktabs} package offers nicely typeset tables, as in \autoref{tab:atable}.
+To address this shortcoming, automated prompt engineering tools can be used.
+They will typically use the LLM itself to determine suitable adjustments or generate new prompts based on a description or training data of the problem~\cite{ramnath2025SystematicSurvey}.
 
-Please use \texttt{\textbackslash small} as the font size for tables.
-
-\label{sec:Introduction:Tables}
-\begin{table}
-\centering\small
-\begin{tabular}{r l}
-\toprule
-abc & def\\
-ghi & jkl\\
-\midrule
-123 & 456\\
-789 & 0AB\\
-\bottomrule
-\end{tabular}
-\caption{A table}
-\label{tab:atable}
-\end{table}
-
-\section{Example: Formula}
-One of the nice things about the Linux Libertine font is that it comes with
-a math mode package.
-\begin{displaymath}
-f(x)=\Omega(g(x))\ (x\rightarrow\infty)\;\Leftrightarrow\;
-\limsup_{x \to \infty} \left|\frac{f(x)}{g(x)}\right|> 0
-\end{displaymath}
-
-%% --------------------
-%% | /Example content |
-%% --------------------
+The LiSSA framework~\cite{fuchss2025LiSSAGeneric} proposes an environment for \TLR tasks, including multiple pipeline steps for preprocessing of input data.
+They rely on the power of \LLMs to extract traceability links from a variety of different artifacts, also across multiple domains.
+My work will contribute an automatic prompt refinement algorithm to this framework.
+I am expecting to improve \TLR, especially for larger projects in the requirements-to-requirements domain.
