--- a/thesis.tex
+++ b/thesis.tex
@@ -16,19 +16,19 @@
 %% Available languages: english, ngerman
 %% Available modes: draft, final (see README)
 \documentclass[twoside, english]{sdqthesis}
-
+\usepackage{preamble}
 %% ---------------------------------
 %% | Information about the thesis  |
 %% ---------------------------------
 
 %% Name of the author
-\author{My Name}
+\author{Daniel Schwab}
 
 %% Title (and possibly subtitle) of the thesis
-\title{Title of the Thesis}
+\title{Automated Prompt Engineering for Traceability Link Recovery}
 
 %% Type of the thesis 
-\thesistype{Master's Thesis/Bachelor's Thesis}
+\thesistype{Bachelor's Thesis}
 
 %% Change the institute here, ``KASTEL'' is default
 % \myinstitute{Institute for \dots}
@@ -37,22 +37,22 @@
 %% instead of the SDQ logo
 % \grouplogo{myfile}
 %% Alternatively, you can disable the group logo
-% \nogrouplogo
+\nogrouplogo
 
 %% The reviewers are the professors that grade your thesis
-\reviewerone{Prof. A}
-\reviewertwo{Prof. B}
+\reviewerone{Prof. Dr.-Ing. Anne Koziolek}
+\reviewertwo{Prof. Dr. Ralf Reussner}
 
 %% The advisors are PhDs or Postdocs
-\advisorone{M.Sc. C}
+\advisorone{M.Sc. Dominik Fuchß}
 %% The second advisor can be omitted
-\advisortwo{M.Sc. D}
+\advisortwo{Dr.-Ing. Tobias Hey}
 
 %% Please enter the start end end time of your thesis
-\editingtime{xx. Month 20XX}{xx. Month 20XX}
+\editingtime{23. June 2025}{23. October 2025}
 
 %% Please enter the place of residence of the author. This is used on the declarationpage
-\location{My city}
+\location{Karlsruhe}
 
 \settitle
 
@@ -85,7 +85,8 @@
 %% The Preamble begins here
 \frontmatter
 
-\input{sections/declaration.tex}
+%TODO: Include in final version
+%\input{sections/declaration}
 
 \setcounter{page}{1}
 \pagenumbering{roman}
@@ -102,7 +103,8 @@
 %% The text is included from the following files:
 %% - sections/abstract
 
-\includeabstract
+%TODO: Write an abstract
+%\includeabstract
 
 %% ------------------------
 %% |   Table of Contents  |
@@ -118,10 +120,13 @@
 
 \mainmatter
 
-\input{sections/introduction.tex}
-\input{sections/content.tex}
-\input{sections/evaluation.tex}
-\input{sections/conclusion.tex}
+\input{sections/introduction}
+\input{sections/foundations}
+\input{sections/related_work}
+\input{sections/approach}
+\input{sections/evaluation}
+\input{sections/conclusion}
+
 
 %% --------------------
 %% |   Bibliography   |
@@ -133,7 +138,7 @@
 %% ----------------
 %% |   Appendix   |
 %% ----------------
-\appendix
-\input{sections/appendix.tex}
+%\appendix
+%\input{sections/appendix}
 
 \end{document}
