--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -57,9 +57,11 @@
 
 \begin{landscape}
 \include{tables/naive_prompt_optimization}
-
-
 \end{landscape}
+
+\include{tables/1}
+\include{tables/2}
+
 
 
 
